// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footnote renders closed 1`] = `
.c4 {
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7 {
  word-wrap: break-word;
  color: #2a2c2e;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.25;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
}

.c7 .c12,
.c7 sup {
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
  font-size: 0.875rem;
  top: -0.5em;
}

.c3 {
  padding: 0;
  margin: 0;
  border-width: 0;
  -webkit-transform: rotate(-0.00001deg);
  -ms-transform: rotate(-0.00001deg);
  transform: rotate(-0.00001deg);
  width: 100%;
  height: 1px;
  background-color: #d8d8d8;
}

.c9 {
  background: #f7f7f8;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background-color: #f7f7f8;
  display: block;
  box-shadow: 0 0 16px 0 rgba(213,213,213,0.5);
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  -webkit-transition: -webkit-transform 500ms ease-out;
  -webkit-transition: transform 500ms ease-out;
  transition: transform 500ms ease-out;
  z-index: 99999;
  visibility: hidden;
}

.c1 {
  position: relative;
  width: 100%;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  -webkit-transition: height 400ms ease-out,opacity 300ms;
  transition: height 400ms ease-out,opacity 300ms;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  background-color: #f7f7f8;
  max-height: calc(100vh - autopx);
  height: auto;
  opacity: 1;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  display: none;
}

.c10 {
  display: none;
}

@media (min-width:768px) {
  .c4 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width:768px) {
  .c0 {
    top: auto;
    bottom: 0;
    height: auto;
    max-height: 50vh;
  }
}

@media (min-width:768px) {
  .c11 {
    max-height: calc(50vh - autopx);
  }
}

@media (min-width:768px) {
  .c2 {
    display: block;
  }
}

@media (max-width:767px) {
  .c10 {
    display: block;
  }
}

<div>
  <span
    id="title"
  >
    Terms and conditions may apply
  </span>
  <button
    id="one"
    type="button"
  >
    1
  </button>
  <button
    id="two"
    type="button"
  >
    2
  </button>
  <div>
    <div
      aria-modal="true"
      class="c0"
      role="dialog"
    >
      <div
        aria-label="modal dialog"
        aria-modal="true"
        role="dialog"
      >
        <div
          class="FocusTrap__placeholder"
          tabindex="0"
        />
        <div>
          <div
            class="c1"
          >
            <div
              class="c2"
            >
              <hr
                class="c3"
              />
            </div>
            <div
              class="c4"
            >
              <div
                class="TDS_FlexGrid-modules__flexGrid___QxDgy TDS_FlexGrid-modules__limitWidth___2SDcu TDS_FlexGrid-modules__xsReverseCancel___20p12 TDS_FlexGrid-modules__smReverseCancel___-_YfQ TDS_FlexGrid-modules__mdReverseCancel___3cUDQ TDS_FlexGrid-modules__lgReverseCancel___1lfjg TDS_FlexGrid-modules__xlReverseCancel___OIqvi TDS_flexboxgrid2__container-fluid___3c7kO"
              >
                <div
                  class="TDS_Row-modules__flexRow___3CHOR TDS_Row-modules__xsReverseCancel___3qDNC TDS_Row-modules__smReverseCancel___VUTb9 TDS_Row-modules__mdReverseCancel___1MWfN TDS_Row-modules__lgReverseCancel___1Ngyt TDS_Row-modules__xlReverseCancel___16npr TDS_flexboxgrid2__row___3YyB2"
                >
                  <div
                    class="TDS_flexboxgrid2__col-xs-12___3Q9tF TDS_Col-modules__xsVisible___yQn24 TDS_Col-modules__smVisible___3-waa TDS_Col-modules__mdVisible___wUg94 TDS_Col-modules__lgVisible___7FbXv TDS_Col-modules__xlVisible___1AW2r TDS_Col-modules__padding___2tLQS"
                  >
                    <div
                      class="c5 sc-EHOje c5 c6"
                    >
                      <h2
                        class="c7"
                        data-testid="heading"
                        tabindex="-1"
                      >
                        Terms and conditions
                      </h2>
                      <button
                        aria-label="close"
                        class="clickable c8"
                        type="button"
                      >
                        <svg
                          class="c9"
                          height="24px"
                          viewBox="0 0 24 24"
                          width="24px"
                          xlink="http://www.w3.org/1999/xlink"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            fill="none"
                            fill-rule="evenodd"
                            stroke="none"
                            stroke-width="1"
                          >
                            <g
                              fill="#4B286D"
                              fill-rule="nonzero"
                            >
                              <path
                                d="M11.99975,12.70675 L7.85325,16.85325 C7.75625,16.95025 7.62825,16.99925 7.50025,16.99925 C7.37225,16.99925 7.24425,16.95025 7.14625,16.85325 C6.95125,16.65825 6.95125,16.34125 7.14625,16.14625 L11.29275,11.99975 L7.14625,7.85325 C6.95125,7.65825 6.95125,7.34125 7.14625,7.14625 C7.34125,6.95125 7.65825,6.95125 7.85325,7.14625 L11.99975,11.29275 L16.14625,7.14625 C16.34125,6.95125 16.65825,6.95125 16.85325,7.14625 C17.04825,7.34125 17.04825,7.65825 16.85325,7.85325 L12.70675,11.99975 L16.85325,16.14625 C17.04825,16.34125 17.04825,16.65825 16.85325,16.85325 C16.75625,16.95025 16.62825,16.99925 16.50025,16.99925 C16.37225,16.99925 16.24425,16.95025 16.14625,16.85325 L11.99975,12.70675 Z M12,24 C5.38330435,24 0,18.6166957 0,12 C0,5.38330435 5.38330435,0 12,0 C18.6166957,0 24,5.38330435 24,12 C24,18.6166957 18.6166957,24 12,24 Z M12,1.04347826 C5.95826087,1.04347826 1.04347826,5.95826087 1.04347826,12 C1.04347826,18.0417391 5.95826087,22.9565217 12,22.9565217 C18.0417391,22.9565217 22.9565217,18.0417391 22.9565217,12 C22.9565217,5.95826087 18.0417391,1.04347826 12,1.04347826 Z"
                              />
                            </g>
                          </g>
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c10"
            >
              <hr
                class="c3"
              />
            </div>
          </div>
          <div
            class="c11"
          />
        </div>
        <div
          class="FocusTrap__placeholder"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Footnote renders opened 1`] = `
.c4 {
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7 {
  word-wrap: break-word;
  color: #2a2c2e;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.25;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
}

.c7 .c12,
.c7 sup {
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
  font-size: 0.875rem;
  top: -0.5em;
}

.c3 {
  padding: 0;
  margin: 0;
  border-width: 0;
  -webkit-transform: rotate(-0.00001deg);
  -ms-transform: rotate(-0.00001deg);
  transform: rotate(-0.00001deg);
  width: 100%;
  height: 1px;
  background-color: #d8d8d8;
}

.c9 {
  background: #f7f7f8;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background-color: #f7f7f8;
  display: block;
  box-shadow: 0 0 16px 0 rgba(213,213,213,0.5);
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  -webkit-transition: -webkit-transform 500ms ease-out;
  -webkit-transition: transform 500ms ease-out;
  transition: transform 500ms ease-out;
  z-index: 99999;
  visibility: hidden;
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
}

.c1 {
  position: relative;
  width: 100%;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  -webkit-transition: height 400ms ease-out,opacity 300ms;
  transition: height 400ms ease-out,opacity 300ms;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  background-color: #f7f7f8;
  max-height: calc(100vh - autopx);
  height: auto;
  opacity: 1;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  display: none;
}

.c10 {
  display: none;
}

@media (min-width:768px) {
  .c4 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width:768px) {
  .c0 {
    top: auto;
    bottom: 0;
    height: auto;
    max-height: 50vh;
  }
}

@media (min-width:768px) {
  .c11 {
    max-height: calc(50vh - autopx);
  }
}

@media (min-width:768px) {
  .c2 {
    display: block;
  }
}

@media (max-width:767px) {
  .c10 {
    display: block;
  }
}

<div>
  <span
    id="title"
  >
    Terms and conditions may apply
  </span>
  <button
    id="one"
    type="button"
  >
    1
  </button>
  <button
    id="two"
    type="button"
  >
    2
  </button>
  <div>
    <div
      aria-modal="true"
      class="c0"
      role="dialog"
    >
      <div
        aria-label="modal dialog"
        aria-modal="true"
        role="dialog"
      >
        <div
          class="FocusTrap__placeholder"
          tabindex="0"
        />
        <div>
          <div
            class="c1"
          >
            <div
              class="c2"
            >
              <hr
                class="c3"
              />
            </div>
            <div
              class="c4"
            >
              <div
                class="TDS_FlexGrid-modules__flexGrid___QxDgy TDS_FlexGrid-modules__limitWidth___2SDcu TDS_FlexGrid-modules__xsReverseCancel___20p12 TDS_FlexGrid-modules__smReverseCancel___-_YfQ TDS_FlexGrid-modules__mdReverseCancel___3cUDQ TDS_FlexGrid-modules__lgReverseCancel___1lfjg TDS_FlexGrid-modules__xlReverseCancel___OIqvi TDS_flexboxgrid2__container-fluid___3c7kO"
              >
                <div
                  class="TDS_Row-modules__flexRow___3CHOR TDS_Row-modules__xsReverseCancel___3qDNC TDS_Row-modules__smReverseCancel___VUTb9 TDS_Row-modules__mdReverseCancel___1MWfN TDS_Row-modules__lgReverseCancel___1Ngyt TDS_Row-modules__xlReverseCancel___16npr TDS_flexboxgrid2__row___3YyB2"
                >
                  <div
                    class="TDS_flexboxgrid2__col-xs-12___3Q9tF TDS_Col-modules__xsVisible___yQn24 TDS_Col-modules__smVisible___3-waa TDS_Col-modules__mdVisible___wUg94 TDS_Col-modules__lgVisible___7FbXv TDS_Col-modules__xlVisible___1AW2r TDS_Col-modules__padding___2tLQS"
                  >
                    <div
                      class="c5 sc-EHOje c5 c6"
                    >
                      <h2
                        class="c7"
                        data-testid="heading"
                        tabindex="-1"
                      >
                        Terms and conditions
                      </h2>
                      <button
                        aria-label="close"
                        class="clickable c8"
                        type="button"
                      >
                        <svg
                          class="c9"
                          height="24px"
                          viewBox="0 0 24 24"
                          width="24px"
                          xlink="http://www.w3.org/1999/xlink"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            fill="none"
                            fill-rule="evenodd"
                            stroke="none"
                            stroke-width="1"
                          >
                            <g
                              fill="#4B286D"
                              fill-rule="nonzero"
                            >
                              <path
                                d="M11.99975,12.70675 L7.85325,16.85325 C7.75625,16.95025 7.62825,16.99925 7.50025,16.99925 C7.37225,16.99925 7.24425,16.95025 7.14625,16.85325 C6.95125,16.65825 6.95125,16.34125 7.14625,16.14625 L11.29275,11.99975 L7.14625,7.85325 C6.95125,7.65825 6.95125,7.34125 7.14625,7.14625 C7.34125,6.95125 7.65825,6.95125 7.85325,7.14625 L11.99975,11.29275 L16.14625,7.14625 C16.34125,6.95125 16.65825,6.95125 16.85325,7.14625 C17.04825,7.34125 17.04825,7.65825 16.85325,7.85325 L12.70675,11.99975 L16.85325,16.14625 C17.04825,16.34125 17.04825,16.65825 16.85325,16.85325 C16.75625,16.95025 16.62825,16.99925 16.50025,16.99925 C16.37225,16.99925 16.24425,16.95025 16.14625,16.85325 L11.99975,12.70675 Z M12,24 C5.38330435,24 0,18.6166957 0,12 C0,5.38330435 5.38330435,0 12,0 C18.6166957,0 24,5.38330435 24,12 C24,18.6166957 18.6166957,24 12,24 Z M12,1.04347826 C5.95826087,1.04347826 1.04347826,5.95826087 1.04347826,12 C1.04347826,18.0417391 5.95826087,22.9565217 12,22.9565217 C18.0417391,22.9565217 22.9565217,18.0417391 22.9565217,12 C22.9565217,5.95826087 18.0417391,1.04347826 12,1.04347826 Z"
                              />
                            </g>
                          </g>
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c10"
            >
              <hr
                class="c3"
              />
            </div>
          </div>
          <div
            class="c11"
          />
        </div>
        <div
          class="FocusTrap__placeholder"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</div>
`;
